# django-image-focus

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
focusarea/: __init__.py  admin.py  fields.py  widgets.py
focusarea/static/focusarea/js/: focusarea-widget.js
imagefocus/: __init__.py  admin.py  fields.py  widgets.py
imagefocus/static/imagefocus/css/: imagefocus-file-widget.css  imagefocus-point-widget.css
imagefocus/static/imagefocus/js/: imagefocus-file-widget.js  imagefocus-point-widget.js
imagefocus/templates/imagefocus/: imagefocus_file_widget.html  imagefocus_point_widget.html
